rewards-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: test-domain.local
      http:
        paths:
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          # match /api to backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          # Match frontend requests
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
